kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eureka-server
  labels:
    app: eureka-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: eureka.davidcamelo.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: eureka-server
                port:
                  number: 8761
  tls:
    - hosts:
        - eureka.davidcamelo.com
      secretName: eureka-server-ingress
